--- a/index.html
+++ b/index.html
@@ -179,7 +179,10 @@
         </div>
       </a>
 
-      <a class="card-link" href="#" target="_blank" rel="noopener">
+      <!-- UPDATED: AIMAGE URL -->
+      <a class="card-link"
+         href="https://www.ghostproductions.com/image-tags/medical-illustration?skk?blog"
+         target="_blank" rel="noopener">
         <div class="icon">AI</div>
         <div class="card-content">
           <h4>AIMAGE</h4>
@@ -187,8 +190,11 @@
         </div>
       </a>
 
-      <!-- Ghost Human Baseline also clickable (optional) -->
-      <a class="baseline" href="#" target="_blank" rel="noopener" aria-label="Ghost Human Baseline link">
+      <!-- UPDATED: Ghost Human Baseline URL -->
+      <a class="baseline"
+         href="https://www.ghostproductions.com/?skkblog"
+         target="_blank" rel="noopener"
+         aria-label="Ghost Human Baseline link">
         <div class="icon">GH</div>
         <div class="card-content">
           <h4>Ghost Human Baseline</h4>
@@ -205,6 +211,7 @@
         Until this AI matures enough to realize that nothing is offensive about medically accurate imagery, we won't even consider it.
       </p>
     </section>
+
   </div>
 <script src="https://cdn.jsdelivr.net/npm/iframe-resizer@4.3.9/js/iframeResizer.contentWindow.min.js"></script>
 </body>
